--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <<head>
-  <<title>My webpage</title>
+  <title>My webpage</title>
 </head>
-<<body>
+<body>
   Hello, world!
 </body>
 </html>
