--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,10 @@
   <title>My webpage</title>
 </head>
 <body>
+  <form>
+    <input type="text" placeholder="Full Name" name="name">
+    <button>Submit!</button>
+  </form>
   Hello, world!
 </body>
 </html>
