--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,11 @@
   <title>Hello</title>
 </head>
 <body>
+  <h1 style="color:blue;text-align:center;"> Welcome Page</h1>
+  Hello, world!
   <form>
     <input type="text" placeholder="Full Name" name="name">
     <button>Submit!</button>
   </form>
-  Hello, world!
 </body>
 </html>
