--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,15 @@
 <html>
 <head>
   <title>Hello</title>
+  <style>
+  h1 {
+    color:blue;
+    text-align: center;
+  }
+  </style>
 </head>
 <body>
-  <h1 style="color:blue;text-align:center;"> Welcome Page</h1>
+  <h1> Welcome Page</h1>
   Hello, world!
   <form>
     <input type="text" placeholder="Full Name" name="name">
