More css command

--- a/hello.html
+++ b/hello.html
@@ -7,9 +7,11 @@
 <body>
   <h1> Welcome Page</h1>
   Hello, world!
-  <form>
-    <input type="text" placeholder="Full Name" name="name">
-    <button>Submit!</button>
-  </form>
+  <div>
+    <form>
+      <input type="text" placeholder="Full Name" name="name">
+      <button>Submit!</button>
+    </form>
+  </div>
 </body>
 </html>
